block quote and pull quotes

--- a/index.html
+++ b/index.html
@@ -288,6 +288,14 @@
             so, because it should be plain as day.
           </p>
 
+          <div class="pullquote">
+            <p>
+              Making stories is hard. It has been the same level hard for the past
+              10,000 years. It will be the same level hard 10,000 years into the
+              future.
+            </p>
+          </div>
+
           <p>
             Making stories is hard. It has been the same level hard for the past
             10,000 years. It will be the same level hard 10,000 years into the
@@ -297,6 +305,14 @@
             emotional impact on the viewer, all while seeming true and not
             contrived is a human miracle.
           </p>
+
+          <blockquote>
+            <p>
+              Making stories is hard. It has been the same level hard for the past
+              10,000 years. It will be the same level hard 10,000 years into the
+              future.
+            </p>
+          </blockquote>
 
           <p>
             Certainly, you've seen a big budget movie where it was technically
