--- a/index.html
+++ b/index.html
@@ -1432,6 +1432,6 @@
       </div>
     </div>
 
-    <script src="js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
