photoswipe for single figures

--- a/index.html
+++ b/index.html
@@ -222,7 +222,15 @@
       </aside>
 
       <figure class="w-column">
-        <img src="wide-image.jpg" />
+        <a
+          href="wide-image.jpg"
+          data-size="2550x1113"
+        >
+          <img
+            src="wide-image.jpg"
+            alt=""
+          />
+        </a>
         <figcaption>
           This is the caption for the full-column image. Maybe it could be a
           sidenote?
@@ -230,7 +238,15 @@
       </figure>
 
       <figure class="w-large">
-        <img src="wide-image.jpg" />
+        <a
+          href="wide-image.jpg"
+          data-size="2550x1113"
+        >
+          <img
+            src="wide-image.jpg"
+            alt=""
+          />
+        </a>
         <figcaption>
           This is the caption for the large image.
         </figcaption>
@@ -336,7 +352,15 @@
       </aside>
 
       <figure class="w-grid">
-        <img src="wide-image.jpg" />
+        <a
+          href="wide-image.jpg"
+          data-size="2550x1113"
+        >
+          <img
+            src="wide-image.jpg"
+            alt=""
+          />
+        </a>
         <figcaption>
           This is the caption for the full-grid image.
         </figcaption>
