embed video and maintain aspect ratio

--- a/index.html
+++ b/index.html
@@ -421,6 +421,19 @@
         describe images to synthesize a story? Why not develop a story visually?
         Instead of writing with words, write with images.
       </p>
+
+      <div
+        class="w-large"
+        style="--aspect-ratio: 16 / 9;"
+      >
+        <iframe
+          src="https://www.youtube-nocookie.com/embed/0SxsW0T-xW0"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+
       <p>
         It’s easy to understand why we write with words. We use collections of
         words as symbols to create ideas. We can speak and listen to words to
