.pull-left, .pull-right

--- a/index.html
+++ b/index.html
@@ -384,7 +384,13 @@
       <p>
         Making stories is hard. It has been the same level hard for the past
         10,000 years. It will be the same level hard 10,000 years into the
-        future. Technology may help with minor busywork annoyances, but the
+        future. 
+        
+        <span class="pull-right">
+          Technology may help with minor busywork annoyances.
+        </span>
+
+        Technology may help with minor busywork annoyances, but the
         ability to contrive a story from nothing, infuse it with love and soul,
         solve it's infinite potential issues, and economically have an emotional
         impact on the viewer, all while seeming true and not contrived is a
@@ -401,7 +407,14 @@
 
       <p>
         Certainly, you've seen a big budget movie where it was technically
-        astounding, but the story just sucked. What's the point of burning tons
+        astounding, but the story just sucked.
+        
+        <span class="pull-left">
+          it was technically
+        astounding, but the story just sucked
+        </span>
+
+        What's the point of burning tons
         of production cash if the story sucks? Why not wait until you have fully
         developed the story?
       </p>
