full window video (experimental)

--- a/index.html
+++ b/index.html
@@ -467,6 +467,20 @@
         demonstrate timing, pacing and tone, which is often near impossible to
         do in words.
       </p>
+
+      <div class="w-window">
+        <div
+          style="--aspect-ratio: 16 / 9;"
+        >
+          <iframe
+            src="https://www.youtube-nocookie.com/embed/0SxsW0T-xW0"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+
       <p>
         The downside of drawing images to synthesize stories is that you need to
         be able to draw. However, I have been assured by many story artists that
