--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
         astounding, but the story just sucked.
         
         <span class="pull-left">
-          it was technically
+          …it was technically
         astounding, but the story just sucked
         </span>
 
