--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <div class="main container">
+    <div class="container">
       <header>
         <div class="primary-nav flex flex-row justify-between">
           <div class="flex justify-end">
