photoswipe for floated inline images

--- a/index.html
+++ b/index.html
@@ -278,13 +278,39 @@
       </aside>
 
       <p>
-        <img src="wide-image.jpg" class="float-right" />
+        <span class="float-left" data-image>
+          <a
+            href="wide-image.jpg"
+            data-size="2550x1113"
+          >
+            <img
+              src="wide-image.jpg"
+              alt=""
+            />
+          </a>
+          <span class="caption">
+            This is an inline caption
+          </span>
+        </span>
+
         In the future, any person with a story idea will be able to produce
         their stories into full reality. They won't be restricted by where they
         came from or who they are now, but rather, empowered because of where
         they came from and who they are now. They won't worry about money or
         possessing technology.
-        <img src="wide-image.jpg" class="float-left" />
+
+        <span class="float-right" data-image>
+          <a
+            href="wide-image.jpg"
+            data-size="2550x1113"
+          >
+            <img
+              src="wide-image.jpg"
+              alt=""
+            />
+          </a>
+        </span>
+
         They will have a place to create stories, find others to work with, and
         find audiences that connect with their work. They will be free to play
         and explore creative story ideas ultimately creating visual stories with
