--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         This is a sidenote. It explains some stuff. Anything can go here!
       </aside>
 
-      <figure class="w-column">
+      <figure class="w-column" data-image>
         <a
           href="wide-image.jpg"
           data-size="2550x1113"
@@ -237,7 +237,7 @@
         </figcaption>
       </figure>
 
-      <figure class="w-large">
+      <figure class="w-large" data-image>
         <a
           href="wide-image.jpg"
           data-size="2550x1113"
@@ -377,7 +377,7 @@
         This is another sidenote. It explains some stuff. Anything can go here!
       </aside>
 
-      <figure class="w-grid">
+      <figure class="w-grid" data-image>
         <a
           href="wide-image.jpg"
           data-size="2550x1113"
