--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
           <img
             src="wide-image.jpg"
             alt=""
+            loading="lazy"
           />
         </a>
         <figcaption>
@@ -245,6 +246,7 @@
           <img
             src="wide-image.jpg"
             alt=""
+            loading="lazy"
           />
         </a>
         <figcaption>
@@ -286,6 +288,7 @@
             <img
               src="wide-image.jpg"
               alt=""
+              loading="lazy"
             />
           </a>
           <span class="caption">
@@ -307,6 +310,7 @@
             <img
               src="wide-image.jpg"
               alt=""
+              loading="lazy"
             />
           </a>
         </span>
@@ -337,6 +341,7 @@
               src="https://wonderunit.com/storyboarder/photoshop-storyboarder.png"
               itemprop="thumbnail"
               alt="Image description"
+              loading="lazy"
             />
           </a>
           <figcaption itemprop="caption description">
@@ -358,6 +363,7 @@
               src="https://wonderunit.com/storyboarder/photoshop.png"
               itemprop="thumbnail"
               alt="Image description"
+              loading="lazy"
             />
           </a>
           <figcaption itemprop="caption description">
@@ -385,6 +391,7 @@
           <img
             src="wide-image.jpg"
             alt=""
+            loading="lazy"
           />
         </a>
         <figcaption>
@@ -470,6 +477,7 @@
           frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
+          loading="lazy"
         ></iframe>
       </div>
 
@@ -503,6 +511,7 @@
             frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
+            loading="lazy"
           ></iframe>
         </div>
       </div>
