--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
         do in words.
       </p>
 
-      <div class="w-window">
+      <div class="w-grid">
         <div
           style="--aspect-ratio: 16 / 9;"
         >
