masthead can have a background video

--- a/index.html
+++ b/index.html
@@ -199,7 +199,11 @@
         </nav>
       </div>
 
-      <div class="masthead"></div>
+      <div class="masthead">
+        <video playsinline loop muted autoplay>
+          <source src="https://wonderunit.com/storyboarder/backgroundvideo.mp4" type="video/mp4">
+        </video>
+      </div>
 
       <div class="inner-cover cover">
         <div class="centered">
