masthead can have a background img

--- a/index.html
+++ b/index.html
@@ -200,9 +200,17 @@
       </div>
 
       <div class="masthead">
+        <!-- can include a background video or img, e.g.: -->
+
+        <!--
         <video playsinline loop muted autoplay>
           <source src="https://wonderunit.com/storyboarder/backgroundvideo.mp4" type="video/mp4">
         </video>
+        -->
+
+        <!--
+        <img src="wide-image.jpg" />
+        -->
       </div>
 
       <div class="inner-cover cover">
