basic audio player
- toggle play/pause via icon
- can skip to timestamp (in seconds)

--- a/index.html
+++ b/index.html
@@ -219,6 +219,12 @@
         </div>
       </div>
 
+      <audio
+        data-audio-player
+        controls
+        src="/media/a-future-of-visual-storytelling.mp3"
+      ></audio>
+
       <p>
         In the future,
         <span name="story-idea">anyone with a story idea</span> will be able to
@@ -267,6 +273,7 @@
       </figure>
 
       <h2 id="1.-story-development">
+        <a class="speaker-icon" data-speak data-speak-start="8.1" href="#">🔈</a>
         <a class="header-anchor" href="#1.-story-development">¶</a>Example H2
       </h2>
 
