svg speaker icon

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
       </figure>
 
       <h2 id="1.-story-development">
-        <a class="speaker-icon" data-speak data-speak-start="8.1" href="#">🔈</a>
+        <a class="speaker-icon" data-speak data-speak-start="8.1" href="#"></a>
         <a class="header-anchor" href="#1.-story-development">¶</a>Example H2
       </h2>
 
