spoken audio example

--- a/index.html
+++ b/index.html
@@ -272,8 +272,25 @@
         </figcaption>
       </figure>
 
+
+      <!-- speaking demo -->
+<h2>Speaking Demo:</h2>
+<h2 id="some-side-notes"><a class="speaker-icon" data-speak="" data-speak-start="105.882" href="#some-side-notes"></a><a class="header-anchor" href="#some-side-notes">¶</a> Some Side Notes</h2>
+<h3 id="this-is-not-the-future-it-is-a-future"><a class="speaker-icon" data-speak="" data-speak-start="107.096" href="#this-is-not-the-future-it-is-a-future"></a><a class="header-anchor" href="#this-is-not-the-future-it-is-a-future">¶</a> This is not the future, it is <em>a future</em>.</h3>
+<p id="p-5"><a class="speaker-icon" data-speak="" data-speak-start="109.870" href="#p-5"></a>These are a collection of my dumb ideas of a very near future of visual storytelling concepts, processes, and technologies that I'm thinking about. I'm not trying to push anything on anyone. I want everyone to have their own idea of the future so we can have conversations and an exchange of ideas. I'm writing this mostly to organize my thoughts, but also to get feedback from you!</p>
+<p id="p-6"><a class="speaker-icon" data-speak="" data-speak-start="137.646" href="#p-6"></a>"As far as the future, most of it is already here, it's just not very evenly distributed." – Abraham Lincoln.</p>
+<p id="p-7"><a class="speaker-icon" data-speak="" data-speak-start="145.744" href="#p-7"></a>Steal the future from everywhere you see it. I'm personally live-action focused, and I'm incredibly surprised live-action production hasn't stolen simple genius ideas from animation and theatrical productions. They haven't even attempted. They aren't even aware of interesting processes from video game development, car manufacturing, university research, or tinkerers on youtube.</p>
+<p id="p-8"><a class="speaker-icon" data-speak="" data-speak-start="173.809" href="#p-8"></a>All the concepts talked about are in place by some people already or in different contexts. As far as technology, most of it exists already, it might just be inaccessible. I want to try to make the concepts and technology accessible to most people if possible.</p>
+<h3 id="why-is-visual-storytelling-important"><a class="speaker-icon" data-speak="" data-speak-start="191.322" href="#why-is-visual-storytelling-important"></a><a class="header-anchor" href="#why-is-visual-storytelling-important">¶</a> Why is visual storytelling important?</h3>
+<p id="p-9"><a class="speaker-icon" data-speak="" data-speak-start="193.770" href="#p-9"></a>Stories humanize people. We need to find the humanity in other people's viewpoints. People's stories help people understand each other.</p>
+<p id="p-10"><a class="speaker-icon" data-speak="" data-speak-start="204.062" href="#p-10"></a>Visual stories can create an immediate emotional impact on a viewer in a way that no other art form can.</p>
+<h3 id="what-is-a-visual-story"><a class="speaker-icon" data-speak="" data-speak-start="210.164" href="#what-is-a-visual-story"></a><a class="header-anchor" href="#what-is-a-visual-story">¶</a> What is a Visual Story?</h3>
+<p id="p-11"><a class="speaker-icon" data-speak="" data-speak-start="211.813" href="#p-11"></a>Visual Stories are ideas conveyed through sequential images or even a single image. In almost every case, the story involves the imagery of people or personified objects that immediately have an emotional effect on the viewer and do not require translation. Each sequential image progresses the idea.</p>
+<p id="p-12"><a class="speaker-icon" data-speak="" data-speak-start="231.753" href="#p-12"></a>Examples of visual stories are: animated or live action: movies, tv shows, commercials, webisodes, tiktoks, graphic novels, comics, slide shows, or even a single image. The examples vary in length, format, consumption device, subject matter, production method - but at the highest level, they are images shown in order to convey ideas.</p>
+<p id="p-13"><a class="speaker-icon" data-speak="" data-speak-start="258.953" href="#p-13"></a>Are sounds/music visual stories? Absolutely. In many cases just as emotionally moving as a the visuals.</p>
+
+
       <h2 id="1.-story-development">
-        <a class="speaker-icon" data-speak data-speak-start="8.1" href="#"></a>
         <a class="header-anchor" href="#1.-story-development">¶</a>Example H2
       </h2>
 
