.table-of-contents

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </header>
 
       <div class="left-sidebar flex-row justify-end items-start">
-        <nav class="toc table-of-contents">
+        <nav class="table-of-contents">
           <ol>
             <li>
               <a href="#a-future-of-visual-storytelling">
