update example article audio

--- a/index.html
+++ b/index.html
@@ -431,8 +431,9 @@
         </div>
       </div>
 
-
+<h1 style="opacity:0.5;margin:2rem 0 -2rem 0">Example Article:</h1>
       <!-- article example: start -->
+<h1 id="a-future-of-visual-storytelling"><a class="header-anchor" href="#a-future-of-visual-storytelling">¶</a>A Future of Visual Storytelling</h1>
 <p id="p1"><a class="speaker-icon" data-speak="" data-speak-start="0.000" href="#p1"></a>In the future, anyone with a story idea will be able to develop and visualize their story without technical limitations. They'll be able to direct a visual story by themselves. They'll be able to collaborate real time, building virtual scenes with people next to them or in different countries. They'll be able to iterate freely and easily to make their stories better.</p>
 <p id="p2"><a class="speaker-icon" data-speak="" data-speak-start="16.878" href="#p2"></a>In the future, anyone with a set of storyboards will be able to pick up a camera and start shooting. They won't need to find or build real sets. They won't need to be in the same country as the performers. As they shoot each shot, the scene will be roughly edited together, in real time. The technology will become invisible. They will only need to worry about the story and the performance.</p>
 <p id="p3"><a class="speaker-icon" data-speak="" data-speak-start="35.056" href="#p3"></a>In the future, any person with a story idea will be able to produce their stories into full reality. They won't be restricted by where they came from or who they are now, but rather, empowered because of where they came from and who they are now. They won't worry about money or possessing technology. They will have a place to create stories, find others to work with, and find audiences that connect with their work. They will be free to play and explore creative story ideas ultimately creating visual stories with their most valuable asset: their unique point of view.</p>
