basic audio player

--- a/index.html
+++ b/index.html
@@ -117,13 +117,7 @@
         </div>
       </div>
 
-      <audio
-        data-audio-player
-        controls
-        src="/media/a-future-of-visual-storytelling.mp3"
-      ></audio>
-
-      <h2 style="margin:0">A Simple Example with Text, Images, and Side Notes</h2>
+      <h2 style="margin-top:1em;">A Simple Example with Text, Images, and Side Notes</h2>
 
       <p>
         In the future,
@@ -639,7 +633,18 @@
 <p id="p155"><a class="speaker-icon" data-speak="" data-speak-start="2084.691" href="#p155"></a>Make the best shit. Put your shit out there and don't be a coward.</p>
       <!-- article example: end -->
 
-      <div class="right-sidebar"></div>
+      <div class="right-sidebar">
+        <div class="audio-player">
+          <a class="button button--play"></a>
+          <div class="progress-bar">
+            <div class="progress"></div>
+          </div>
+        </div>
+        <audio
+          data-audio-player
+          src="/media/a-future-of-visual-storytelling.mp3"
+        ></audio>
+      </div>
 
       <footer>
         <div class="flex">
