--- a/index.html
+++ b/index.html
@@ -83,9 +83,32 @@
           </div>
           <div class="flex">
             <ul class="menu flex">
-              <li><a href="#">Stories</a></li>
-              <li><a href="#">Technology</a></li>
-              <li><a href="#">About</a></li>
+              <li>
+                <a href="/technology">Technology</a>
+                <ul>
+                  <li>
+                    <a href="#">Storyboarder</a>
+                  </li>
+                  <li>
+                    <a href="#">Shot Core</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="/articles">Articles</a>
+                <ul>
+                  <li>
+                    <a href="#">A Future of Visual Storytelling</a>
+                  </li>
+                  <li>
+                    <a href="#">How We Use Storyboarding</a>
+                  </li>
+                  <li>
+                    <a href="#">Thoughts on Free and Open Source Software</a>
+                  </li>
+                </ul>
+              </li>
+              <li><a href="/about">About</a></li>
             </ul>
           </div>
         </div>
