margin notes, underlines, and <a> styling

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
       </p>
 
       <h2>
-        <a>Video</a>
+        Video
       </h2>
       <p>
         If we consume visual stories as images, why would a writer use words to
@@ -414,7 +414,9 @@
       </div>
 
       <p>
-        It’s easy to understand why we write with words. We use collections of
+        It’s easy to understand why
+        <span class="margin-note" name="we-write-with-words">we write with words.</span>
+        We use collections of
         words as symbols to create ideas. We can speak and listen to words to
         communicate ideas. We can write words down and read them. We can easily
         mass distribute written words. Words are cheap and effective. But they
@@ -422,9 +424,19 @@
         and feeling of the writer. They require the writer to translate the idea
         to words, and the reader to translate the words to the idea. Those are
         two translations where the original idea can be confused.
+        <a href="https://wonderunit.com">This is an underlined hyper-link to the Wonder Unit internet web site.</a>
       </p>
+
+      <aside class="margin-note" name="we-write-with-words">
+        Scholars now recognize that writing may have independently developed
+        in at least four ancient civilizations:
+        Mesopotamia (c. 3400 – 3100 BC),
+        Egypt (c. 3250 BC), China (1200 BC),
+        and lowland areas of Southern Mexico and Guatemala (by 500 BC).
+      </aside>
+
       <p>
-        In animation, specifically at a company like Pixar, writers do, in fact,
+        In animation, specifically at <span name="a-company-like-pixar">a company like Pixar</span>, writers do, in fact,
         write with images. “Story Artists” draw sequences of images to convey
         stories. Storyboards. This is an incredibly effective way of conveying a
         story because the hand drawn images are very close to the desired end
@@ -433,6 +445,9 @@
         demonstrate timing, pacing and tone, which is often near impossible to
         do in words.
       </p>
+      <aside name="a-company-like-pixar">
+        This should be sidenote #4.
+      </aside>
 
       <div class="w-grid">
         <div
