basic storyboarder.html page

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
       <div class="inner-cover cover">
         <div class="centered">
-          <h1 class="headline">A Future of Visual Storytelling</h1>
+          <h1 class="headline font-bold">A Future of Visual Storytelling</h1>
         </div>
       </div>
 
