--- a/storyboarder.html
+++ b/storyboarder.html
@@ -331,117 +331,142 @@
       <h4>Directors</h4>
       <p>Sketch your shot list through boards to see if they work as a movie.</p>
 
-          <img src="https://wonderunit.com/storyboarder/who-writers.jpg" style="border-radius: 3px;" loading="lazy">
-          <h4>Writers</h4>
-          <p>Take your written stories and visualize them. See the words come to life.</p>
+      <figure class="w-large" data-image>
+        <a
+          href="https://wonderunit.com/storyboarder/who-writers.jpg"
+          data-size="614x303"
+        >
+          <img
+            src="https://wonderunit.com/storyboarder/who-writers.jpg"
+            alt=""
+            loading="lazy"
+          />
+        </a>
+      </figure>
+      <h4>Writers</h4>
+      <p>Take your written stories and visualize them. See the words come to life.</p>
+
+      <figure class="w-large" data-image>
+        <a
+          href="https://wonderunit.com/storyboarder/who-advertisers.jpg"
+          data-size="614x303"
+        >
+          <img
+            src="https://wonderunit.com/storyboarder/who-advertisers.jpg"
+            alt=""
+            loading="lazy"
+          />
+        </a>
+      </figure>
+      <h4>Advertisers</h4>
+      <p>Create storyboards for advertisements so you can visually show your clients.</p>
+
+      <figure class="w-large" data-image>
+        <a
+          href="https://wonderunit.com/storyboarder/who-dreamers.jpg"
+          data-size="614x303"
+        >
+          <img
+            src="https://wonderunit.com/storyboarder/who-dreamers.jpg"
+            alt=""
+            loading="lazy"
+          />
+        </a>
+      </figure>
+      <h4>Dreamers</h4>
+      <p>Have an idea and a dream? Create and iterate on your idea by drawing it.</p>
+
+      <figure class="w-large" data-image>
+        <a
+          href="https://wonderunit.com/storyboarder/who-anyone.jpg"
+          data-size="614x303"
+        >
+          <img
+            src="https://wonderunit.com/storyboarder/who-anyone.jpg"
+            alt=""
+            loading="lazy"
+          />
+        </a>
+      </figure>
+      <h4>Anyone with an idea</h4>
+      <p>You can storyboard even the smallest idea. You don't even have to be able to draw!</p>
 
 
-          <img src="https://wonderunit.com/storyboarder/who-advertisers.jpg" style="border-radius: 3px;" loading="lazy">
-          <h4>Advertisers</h4>
-          <p>Create storyboards for advertisements so you can visually show your clients.</p>
-
-          <img src="https://wonderunit.com/storyboarder/who-dreamers.jpg" style="border-radius: 3px;" loading="lazy">
-          <h4>Dreamers</h4>
-          <p>Have an idea and a dream? Create and iterate on your idea by drawing it.</p>
-
-          <img src="https://wonderunit.com/storyboarder/who-anyone.jpg" style="border-radius: 3px;" loading="lazy">
-          <h4>Anyone with an idea</h4>
-          <p>You can storyboard even the smallest idea. You don't even have to be able to draw!</p>
 
 
 
-<section class="dark">
-  <div class="row">
-    <div class="large-12 columns">
-      <div class="row">
-        <div class="large-6 columns" style="z-index: 99;">
-
-
-          <h2>Do you like storyboarding on paper? Print and import paper storyboards magically.</h2>
-          <p class="larger">In Storyboarder, you can print out storyboard worksheets. Draw on as many frames and pages as you like. Then take a picture of the worksheet with your phone and Storyboarder will automatically import the boards into your project.</p>
-        </div>
-        <div class="large-6 columns" style="z-index: 1;">
-          <img src="https://wonderunit.com/storyboarder/paper.png" style="transform: scale(3.0, 3.0) translate(35%, 30%);" loading="lazy">
-        </div>
+    <h2>Do you like storyboarding on paper? Print and import paper storyboards magically.</h2>
+    <p>In Storyboarder, you can print out storyboard worksheets. Draw on as many frames and pages as you like. Then take a picture of the worksheet with your phone and Storyboarder will automatically import the boards into your project.</p>
+    <figure class="w-large" data-image>
+      <a
+        href="https://wonderunit.com/storyboarder/paper.png"
+        data-size="1000x617"
+      >
+        <img
+          src="https://wonderunit.com/storyboarder/paper.png"
+          alt=""
+          loading="lazy"
+        />
+      </a>
+    </figure>
+    <figure class="w-large" data-image>
+      <a
+        href="https://wonderunit.com/storyboarder/phone.png"
+        data-size="1000x521"
+      >
+        <img
+          src="https://wonderunit.com/storyboarder/phone.png"
+          alt=""
+          loading="lazy"
+        />
+      </a>
+    </figure>
+    <!--
+    <figure class="w-large" data-image>
+      <a
+        href="https://wonderunit.com/storyboarder/importarrow.png"
+        data-size="132x297"
+      >
+        <img
+          src="https://wonderunit.com/storyboarder/importarrow.png"
+          alt=""
+          loading="lazy"
+        />
+      </a>
+    </figure>
+    -->
+      <div
+        class="w-large"
+        style="--aspect-ratio: 16 / 9;"
+      >
+        <video controls>
+          <source src="https://wonderunit.com/storyboarder/import.mp4" type="video/mp4">
+        </video>
       </div>
-      <div class="row">
-        <div class="large-12 columns" style="z-index: 99;">
-          <img src="https://wonderunit.com/storyboarder/phone.png" style="transform: scale(0.7, 0.7) translate(-30%, 0%);" loading="lazy">
 
-          <div style="position: relative;">
-          <img src="https://wonderunit.com/storyboarder/importarrow.png" style="border-radius: none; position: absolute; transform: scale(0.7, 0.7) translate(400px, -300px); opacity: 0.6;" loading="lazy">
-          </div>
-          <video loop="" muted="" autoplay="" style="width: 100%; border-radius: 7px; box-shadow: 0px 10px 60px 0px rgba(0,0,0,0.8);, 0px 1px 3px 1px rgba(0,0,0,0.5); background: #333333;" loading="lazy">
-            <source src="https://wonderunit.com/storyboarder/import.mp4" type="video/mp4">
-          </video>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
-<section>
-  <div class="row">
-    <div class="large-12 columns">
+
+
+
+
       <h2>Export to Premiere, Final Cut, Avid, PDF,<br/> and Animated GIF</h2>
-      <img src="https://wonderunit.com/storyboarder/export-arrows.png" style="position: absolute; opacity: 0.15; transform: scale(0.73, 0.73) translate(-48%, -22%);" loading="lazy">
+      <!--
+      <img src="https://wonderunit.com/storyboarder/export-arrows.png">
+      -->
+      <figure>
+        <img
+          src="https://wonderunit.com/storyboarder/export-premiere.png"
+          loading="lazy">
+      </figure>
+      <p>Export to any editing program. This is great for cutting together your boards or doing realtime editing at shoots. You can also export a contact sheet of your boards as a PDF, and an Animated GIF – perfect for sharing and collaboration.</p>
 
-      <div class="row">
-        <div class="large-9 columns">
-          <img src="https://wonderunit.com/storyboarder/export-premiere.png" style="border-radius: 3px; box-shadow: 0px 2px 15px rgba(0,0,0,0.4);" loading="lazy">
-        </div>
-        <div class="large-3 columns">
+      <figure>
+        <img src="https://wonderunit.com/storyboarder/export-pdf.png" loading="lazy">
+      </figure>
+      <figure>
+        <img src="https://wonderunit.com/storyboarder/ducks.gif" loading="lazy">
+      </figure>
 
-          <p class="larger">Export to any editing program. This is great for cutting together your boards or doing realtime editing at shoots. You can also export a contact sheet of your boards as a PDF, and an Animated GIF – perfect for sharing and collaboration.</p>
-        </div>
-      </div>
-      <div class="row" style="margin-top: 30px;">
-        <div class="large-6 columns">
-          <img src="https://wonderunit.com/storyboarder/export-pdf.png" style="border-radius: 3px; box-shadow: 0px 2px 15px rgba(0,0,0,0.4);" loading="lazy">
-        </div>
-        <div class="large-6 columns">
-         <img src="https://wonderunit.com/storyboarder/ducks.gif" style="width: 100%; border-radius: 3px; border-top: 35px solid black;  border-bottom: 35px solid black; box-shadow: 0px 2px 15px rgba(0,0,0,0.4);" loading="lazy">
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- <section>
-  <div class="row">
-    <div class="large-12 columns">
-      <div class="row">
-        <div class="large-8 columns">
-          <h2>Focus with a Sketch Sprint and then share a timelapse.</h2>
-          <p class="larger">Need to focus? Set a Sketch Sprint timer and just draw and storyboard until the time runs out. At the end of the Sketch Sprint, we will create an animated timelapse gif of your work. It's great for sharing!</p>
-        </div>
-        <div class="large-4 columns">
-          <img src="https://wonderunit.com/storyboarder/sketchsprint.gif" style="border-radius: 3px; box-shadow: 0px 2px 15px rgba(0,0,0,0.4);">
-        </div>
-      </div>
-
-
-
-    </div>
-  </div>
-  <div class="row" style="margin-top: 30px;">
-    <div class="large-12 columns">
-      <div class="row">
-        <div class="large-12 columns">
-          <h2 style="font-size: 30px;">Rest in peace, Mr. Wiggles. (1980-2003) #bettertohavelovedandlost</h2>
-          <video loop="" muted="" autoplay="" style="width: 100%; border-radius: 6px; box-shadow: 0px 2px 15px rgba(0,0,0,0.1);">
-            <source src="https://wonderunit.com/storyboarder/cat.mp4" type="video/mp4">
-          </video>
-          <p style="font-size: 12px;">Timelapse of a random ass cat I drew in 15 minutes during a Sketch Sprint. Mr. Wiggles was lost due to an unfortunate adult circumcision.</p>
-        </div>
-        <div class="large-5 columns">
-
-
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
 
 <section class="dark">
   <div class="row">
@@ -474,27 +499,17 @@
   </div>
 </section>
 
-<section>
-  <div class="row">
-    <div class="large-12 columns">
-      <h2>Key commands for everything.</h2>
-      <div class="row">
-        <div class="large-9 columns">
-          <img src="https://wonderunit.com/storyboarder/keyboard2.gif" style="border-radius: 6px; box-shadow: 0px 2px 15px rgba(0,0,0,0.4);" loading="lazy">
-        </div>
-        <div class="large-3 columns">
 
-          <p class="larger1">Key commands really speed up your work. Pressing "N" for new board, and left and right arrows from navigating is essential. For some, knowing all the key commands is the key to working quickly. If you'd like to know what's possible, just press:</p>
 
-          <p style="margin-top: 50px;">
-          <kbd>Command</kbd> + <kbd>K</kbd>
-        </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
+
+<h2>Key commands for everything.</h2>
+<figure class="w-large">
+  <img
+    src="https://wonderunit.com/storyboarder/keyboard2.gif"
+    loading="lazy">
+</figure>
+<p>Key commands really speed up your work. Pressing "N" for new board, and left and right arrows from navigating is essential. For some, knowing all the key commands is the key to working quickly. If you'd like to know what's possible, just press <kbd>Command</kbd> + <kbd>K</kbd></p>
 
 
 <section>
