try a thin font for Storyboarder title heading

--- a/storyboarder.html
+++ b/storyboarder.html
@@ -128,12 +128,12 @@
 
       <div class="inner-cover cover">
         <div class="centered">
-          <h1 class="headline mb-2">Storyboarder</h1>          
-          <h2 class="font-normal" style="margin: 0.25em 0;">The best way to visualize your story</h2>
+          <h1 class="headline font-thin mb-2">Storyboarder</h1>          
+          <h2 class="font-thin" style="margin: 0.5em 0 1.25em 0;">The best way to visualize your story.</h2>
           <a href="#" class="button button--download" style="margin: 1em 0;">
             Download for Free
           </a>
-          <small style="opacity: 0.5">
+          <small style="opacity: 0.5; font-size: 80%; line-height: 1">
             Version 2.0.1 available for Mac OS X, Windows, and Linux
           </small>
         </div>
